# hoardy-mail

./: CHANGELOG.md  README.md  default.nix  imapexpire.py  mypy.ini  pyproject.toml  sanity.sh  setup.cfg  update-changelog.sh  update-docs.sh  update-readme.sh
hoardy_mail/: __main__.py  argparse_better.py  exceptions.py
imaparms/: __main__.py  argparse.py  argparse_better.py  exceptions.py  imaparms.py
