[metadata]
name = pyimapexpire
version = 1.0
license = GPLv3+
author = Jan Malakhovski
author_email = oxij@oxij.org
summary = Login to an IMAP4 server and remove all messages older than a given number of days
description_file = README.md
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: End Users/Desktop
    Topic :: Communications :: Email
    Topic :: Office/Business
    Topic :: Security :: Cryptography
    Operating System :: POSIX
    Environment :: Console
keywords =
    IMAP
    Mail

[options]
python_requires >= 3.7

setup_requires =
    setuptools

[options.entry_points]
console_scripts =
    pyimapexpire = imapexpire:main
