[metadata]
name = imaparms
version = 1.0
license = GPLv3+
author = Jan Malakhovski
author_email = oxij@oxij.org
summary = Swiss army knife tool for interacting with IMAP4 servers
description_file = README.md
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: End Users/Desktop
    Topic :: Communications :: Email
    Topic :: Office/Business
    Topic :: System :: Archiving :: Backup
    Topic :: System :: Archiving :: Mirroring
    Topic :: System :: Recovery Tools
    Operating System :: POSIX
    Environment :: Console
keywords =
    IMAP
    Mail

[options]
python_requires >= 3.7
setup_requires =
    setuptools

[options.entry_points]
console_scripts =
    imaparms = imaparms.imaparms:main
